--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.24.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
