--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,10 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "next", "next/core-web-vitals",
+        "plugin:prettier/recommended"
+
     ],
     "parserOptions": {
         "ecmaFeatures": {
