--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "prettier": "2.3.2"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": ["eslint --cache --fix", "yarn test --bail"]
   }
 }
