--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "plop": "plop --plopfile generators/plopfile.js",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "plop": "plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "next": "11.1.0",
@@ -18,10 +16,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/react": "^6.3.7",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
