--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "plop": "plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
+    "gsap": "^3.7.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
