--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "gsap": "^3.7.1",
     "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
