--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,8 @@
 root = true
 
 [*]
-indent_style = spaces
-indent_size = 2
+indent_style = tab
+indent_size = 4
 end_of_line = crlf
 charset = utf-8
 insert_final_newline = true
