--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "12",
 		"next-i18next": "^11.0.0",
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-dom": "^18.1.0",
+		"sharp": "^0.30.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
@@ -22,6 +23,7 @@
 		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.0",
 		"plop": "^2.7.4",
-		"prettier": "2.6.2"
+		"prettier": "2.6.2",
+		"webpack-bundle-analyzer": "^4.5.0"
 	}
 }
