--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"plop": "plop --plopfile generators/plopfile.js"
 	},
 	"dependencies": {
-		"gsap": "^3.10.4",
 		"next": "12",
 		"next-i18next": "^11.0.0",
 		"react": "^18.1.0",
@@ -19,9 +18,11 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
+		"@next/bundle-analyzer": "^12.1.6",
 		"babel-loader": "^8.2.2",
 		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.0",
+		"gsap": "^3.10.4",
 		"plop": "^2.7.4",
 		"prettier": "2.6.2",
 		"webpack-bundle-analyzer": "^4.5.0"
